rename method name